<resources>
    <string name="app_name">HaoBlocker</string>
    <string name="app_description">Xposed SMS/Call Blocker.</string>

    <string name="general_about_title">HaoBlocker %1$s</string>
    <string name="general_about_summary">Xposed SMS/Call Blocker.\nCopyright © 2014&#8211;2016 haoutil.com</string>
    <string name="general_enable">Enable</string>
    <string name="general_sms_enable">Block SMS</string>
    <string name="general_call_enable">Block Call</string>
    <string name="general_show_notification">Show Notification</string>

    <string name="rule_label">Rule</string>
    <string name="rule_label_type">Type</string>
    <string name="rule_label_block">Block</string>
    <string name="rule_label_except">Except</string>
    <string name="rule_remark">Remark</string>
    <string name="rule_accept">Accept</string>
    <string name="rule_not_match_type">Keyword rule can only block sms</string>
    <string name="rule_tip_empty_rule">Please provide a rule</string>
    <string name="rule_tip_rule_added">one rule added/updated</string>
    <string name="rule_tip_rule_deleted">one rule deleted</string>
    <string name="rule_tip_sms_deleted">one sms deleted</string>
    <string name="rule_tip_call_deleted">one call deleted</string>

    <string name="discard_dialog_title">Confirm</string>
    <string name="discard_dialog_message">Delete selected item?</string>
    <string name="discard_dialog_button_ok">OK</string>
    <string name="discard_dialog_button_cancel">Cancel</string>

    <string name="snackbar_undo">UNDO</string>

    <string name="notification_content_text"> %1$d message(s), %2$d call(s) blocked.</string>

    <string name="menu_filter">filter</string>
    <string name="menu_filter_all">all</string>
    <string name="menu_filter_call">call rule</string>
    <string name="menu_filter_sms">sms rule</string>
    <string name="menu_filter_except">except rule</string>
    <string name="menu_backup">backup</string>
    <string name="menu_backup_rule_tip">backup rule succeed</string>
    <string name="menu_backup_sms_tip">backup sms history succeed</string>
    <string name="menu_backup_call_tip">backup call history succeed</string>
    <string name="menu_restore">restore</string>
    <string name="menu_restore_rule_miss_tip">blocker_rule.csv must be placed in the root directory of the SD card</string>
    <string name="menu_restore_rule_tip">restore rule succeed</string>
    <string name="menu_restore_sms_miss_tip">blocker_sms.csv must be placed in the root directory of the SD card</string>
    <string name="menu_restore_sms_tip">restore sms history succeed</string>
    <string name="menu_restore_call_miss_tip">blocker_call.csv must be placed in the root directory of the SD card</string>
    <string name="menu_restore_call_tip">restore call history succeed</string>

    <string name="permission_description">The app uses SD card backup settings, please grant the permission.</string>
</resources>
